--- a/homepage.html
+++ b/homepage.html
@@ -1,1 +1,3 @@
-Hello My name is yoyo :3 
+<h1>Phattharanit Tesjaroen</h1>
+<hr/>
+<img style="width:100px" src="https://avatars2.githubusercontent.com/u/501835">
